[package]
name = "comp_decomp_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"

[lib]
name = "comp_decomp_cli"
path = "src/lib.rs"

[[bin]]
name = "comp_decomp_cli"
path = "src/main.rs"
